# air_quality_server_rocket

./: .gitignore  Cargo.toml  README.md
src/: air_quality.rs  baseline.rs  main.rs
