[package]
name = "air_quality_server_rocket"
version = "0.1.0"
authors = ["Masayuki Sunahara <tamanishi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
linux-embedded-hal = "0.3"
sgp30 = "0.3.1"
serde = {version = "1.0.124", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
serde_json = "1.0.64"
